--- a/Lab 1/job_market(1).ipynb
+++ b/Lab 1/job_market(1).ipynb
@@ -686,12 +686,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Completion of Assignment 1"
+    "#Completion of Assignment 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
